# ASCIIRenderer

./: .gitignore  Makefile  README.md
backend/: Cargo.toml
backend/src/: api.rs  examples.rs  lib.rs  main.rs  math.rs  model.rs  renderer.rs
backend/tests/: generate_bindings.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/bindings/: RenderParams.ts
frontend/src/components/: AsciiDisplay.tsx  Controls.tsx  FileUpload.tsx
frontend/src/hooks/: useRenderer.ts
